CHANGELOG FOR ATOMSK
====================


Master
------
- fixed a bug in mode "--density", where the density was not correctly computed if the target property was the atomic mass. Thanks to Jean Furstoss, UMET, University of Lille, France, for pointing out this bug.


Beta 0.11.2 (04 Nov. 2021)
--------------------------
- fixed a bug in neighbor search.
- in option "-dislocation", fixed a bug where displacements would be incorrect when the loop was not normal to Z and the Burgers vector was along Z. Thanks to Marion Borde and Jonathan Amodeo, MATEIS, University of Lyon 1, France, for pointing out this bug.
- in mode "--rdf", fixed bugs where the radial distribution functions were not computed correctly. Thanks to Valentin Delbecq, UMET, University of Lille, France, for pointing out this bug.


Beta 0.11.1 (09 Sept. 2021)
---------------------------
- in mode "--one-in-all", added possibility to read configurations from VASP OUTCAR files.
- in mode "--interpolate", initial and final states are also output with index 0 and N+1 respectively.
- mode "--one-in-all" renamed "--unfold", and mode "--all-in-one" renamed "--gather". Former keywords are still recognized for backward compatibility.
- improved the determination of atom species from POTCAR file when reading VASP POSCAR, CONTCAR or OUTCAR files.
- improved determination of cell vectors when they do not exist in input file (e.g. XYZ), or user triggered option "-rebox".
- added possibility to output to standard output (stdout) by using "-" as file name.
- option "-bind-shells", when no shell is present in the system, will now search for particles close to each other. If such pairs are found, the particle with the greatest mass, or charge, or with lowest ID (whichever comes first) will be considered as a core, the other as a shell. This can be useful e.g. after reading LAMMPS custom dump files containing shells.